# translate-and-process-datasets

./: .gitignore  LICENSE  README.md
filter_no_chinese_k12_resample/: README.md  export_to_csv.py  filter_chinese.py  sync_dataset.py
generate_similarity_with_sentences_es/: .gitignore  README.md  consolidate_batches.py  generate_similarity.py  requirements.txt
translate_openlongcot-pretrain/: README.md  translate.py
translate_openo1-sft/: README.md  translate.py
translate_paq_and_qqp/: .gitignore  README.md  dataset_paq_traducido.xlsx  gpu_temp_guard.py  installer.bash  pyproject.toml  requirements.txt  translate_paq.py  translate_qqp.py  translation_engine.py
wiktionary_get_csv/: read_jsonl.py
